decay fit bugfix

--- a/Analyzer.ipynb
+++ b/Analyzer.ipynb
@@ -890,7 +890,20 @@
       "difference      zscore    : p=9.115e-08 NOT normal\n",
       "difference      minmax    : p=9.115e-08 NOT normal\n",
       "difference      quantile  : p=7.893e-05 NOT normal\n",
-      "difference      power     : p=3.381e-02 NOT normal\n"
+      "difference      power     : p=3.381e-02 NOT normal\n",
+      "peakValue       original  : p=1.006e-02 NOT normal\n",
+      "peakValue       gamma     : p=1.327e-04 NOT normal\n",
+      "peakValue       weibull   : p=2.625e-04 NOT normal\n",
+      "peakValue       boxcox    : p=1.809e-02 NOT normal\n",
+      "peakValue       lognorm   : p=8.978e-05 NOT normal\n",
+      "peakValue       student_t : p=2.082e-04 NOT normal\n",
+      "peakValue       yeojohnson: p=1.819e-02 NOT normal\n",
+      "peakValue       log       : p=5.238e-04 NOT normal\n",
+      "peakValue       sqrt      : p=3.000e-03 NOT normal\n",
+      "peakValue       zscore    : p=1.006e-02 NOT normal\n",
+      "peakValue       minmax    : p=1.006e-02 NOT normal\n",
+      "peakValue       quantile  : p=2.367e-04 NOT normal\n",
+      "peakValue       power     : p=1.819e-02 NOT normal\n"
      ]
     },
     {
@@ -905,19 +918,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peakValue       original  : p=1.006e-02 NOT normal\n",
-      "peakValue       gamma     : p=1.327e-04 NOT normal\n",
-      "peakValue       weibull   : p=2.625e-04 NOT normal\n",
-      "peakValue       boxcox    : p=1.809e-02 NOT normal\n",
-      "peakValue       lognorm   : p=8.978e-05 NOT normal\n",
-      "peakValue       student_t : p=2.082e-04 NOT normal\n",
-      "peakValue       yeojohnson: p=1.819e-02 NOT normal\n",
-      "peakValue       log       : p=5.238e-04 NOT normal\n",
-      "peakValue       sqrt      : p=3.000e-03 NOT normal\n",
-      "peakValue       zscore    : p=1.006e-02 NOT normal\n",
-      "peakValue       minmax    : p=1.006e-02 NOT normal\n",
-      "peakValue       quantile  : p=2.367e-04 NOT normal\n",
-      "peakValue       power     : p=1.819e-02 NOT normal\n",
       "PTPA            original  : p=9.649e-03 NOT normal\n",
       "PTPA            gamma     : p=1.265e-04 NOT normal\n",
       "PTPA            weibull   : p=2.483e-04 NOT normal\n",
@@ -1498,7 +1498,20 @@
       "reactionTime   : p=7.507e-04 NOT normal\n",
       "peakTime       : p=1.000e+00 normal\n",
       "difference     : p=3.335e-02 NOT normal\n",
-      "peakValue      : p=1.809e-02 NOT normal\n"
+      "peakValue      : p=1.809e-02 NOT normal\n",
+      "PTPA           : p=1.937e-02 NOT normal\n",
+      "PTTA           : p=9.069e-02 normal\n",
+      "RMS            : p=1.862e-02 NOT normal\n",
+      "tau            : p=1.040e-02 NOT normal\n",
+      "AUC            : p=4.069e-01 normal\n",
+      "percentPPI     : Not enough data or non-positive values\n",
+      "\n",
+      "Sex: male, Date: April16\n",
+      "reactionTime   : p=4.354e-04 NOT normal\n",
+      "peakTime       : p=2.002e-04 NOT normal\n",
+      "difference     : p=3.287e-03 NOT normal\n",
+      "peakValue      : p=6.713e-01 normal\n",
+      "PTPA           : p=5.666e-01 normal\n"
      ]
     },
     {
@@ -1513,19 +1526,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PTPA           : p=1.937e-02 NOT normal\n",
-      "PTTA           : p=9.069e-02 normal\n",
-      "RMS            : p=1.862e-02 NOT normal\n",
-      "tau            : p=1.040e-02 NOT normal\n",
-      "AUC            : p=4.069e-01 normal\n",
-      "percentPPI     : Not enough data or non-positive values\n",
-      "\n",
-      "Sex: male, Date: April16\n",
-      "reactionTime   : p=4.354e-04 NOT normal\n",
-      "peakTime       : p=2.002e-04 NOT normal\n",
-      "difference     : p=3.287e-03 NOT normal\n",
-      "peakValue      : p=6.713e-01 normal\n",
-      "PTPA           : p=5.666e-01 normal\n",
       "PTTA           : p=7.415e-01 normal\n",
       "RMS            : p=2.695e-01 normal\n",
       "tau            : p=7.341e-01 normal\n",
@@ -1911,19 +1911,7 @@
       "AUC: KS stat=0.114, p=4.475e-01 uniform\n",
       "percentPPI: Not enough data\n",
       "\n",
-      "Sex: male, Date: April16\n",
-      "reactionTime: KS stat=0.334, p=7.171e-06 NOT uniform\n",
-      "peakTime: KS stat=0.349, p=2.172e-06 NOT uniform\n",
-      "difference: KS stat=0.330, p=9.455e-06 NOT uniform\n",
-      "peakValue: KS stat=0.114, p=4.565e-01 uniform\n",
-      "PTPA: KS stat=0.178, p=5.624e-02 uniform\n",
-      "PTTA: KS stat=0.205, p=1.791e-02 NOT uniform\n",
-      "RMS: KS stat=0.133, p=2.741e-01 uniform\n",
-      "tau: KS stat=0.183, p=4.662e-02 NOT uniform\n",
-      "AUC: KS stat=0.115, p=4.402e-01 uniform\n",
-      "percentPPI: Not enough data\n",
-      "\n",
-      "Sex: male, Date: June26\n"
+      "Sex: male, Date: April16\n"
      ]
     },
     {
@@ -1938,6 +1926,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "reactionTime: KS stat=0.334, p=7.171e-06 NOT uniform\n",
+      "peakTime: KS stat=0.349, p=2.172e-06 NOT uniform\n",
+      "difference: KS stat=0.330, p=9.455e-06 NOT uniform\n",
+      "peakValue: KS stat=0.114, p=4.565e-01 uniform\n",
+      "PTPA: KS stat=0.178, p=5.624e-02 uniform\n",
+      "PTTA: KS stat=0.205, p=1.791e-02 NOT uniform\n",
+      "RMS: KS stat=0.133, p=2.741e-01 uniform\n",
+      "tau: KS stat=0.183, p=4.662e-02 NOT uniform\n",
+      "AUC: KS stat=0.115, p=4.402e-01 uniform\n",
+      "percentPPI: Not enough data\n",
+      "\n",
+      "Sex: male, Date: June26\n",
       "reactionTime: KS stat=0.493, p=1.260e-12 NOT uniform\n",
       "peakTime: KS stat=0.233, p=4.691e-03 NOT uniform\n",
       "difference: KS stat=0.231, p=5.248e-03 NOT uniform\n",
@@ -2558,7 +2558,16 @@
       "Sex: female, Date: April16\n",
       "reactionTime: KS stat=0.214, p=1.211e-02 NOT uniform\n",
       "peakTime: KS stat=0.416, p=5.684e-09 NOT uniform\n",
-      "difference: KS stat=0.301, p=7.689e-05 NOT uniform\n"
+      "difference: KS stat=0.301, p=7.689e-05 NOT uniform\n",
+      "peakValue: KS stat=0.182, p=4.831e-02 NOT uniform\n",
+      "PTPA: KS stat=0.190, p=3.578e-02 NOT uniform\n",
+      "PTTA: KS stat=0.117, p=4.158e-01 uniform\n",
+      "RMS: KS stat=0.107, p=5.286e-01 uniform\n",
+      "tau: KS stat=0.193, p=3.038e-02 NOT uniform\n",
+      "AUC: KS stat=0.149, p=1.626e-01 uniform\n",
+      "percentPPI: KS stat=0.199, p=3.072e-02 NOT uniform\n",
+      "\n",
+      "Sex: female, Date: June26\n"
      ]
     },
     {
@@ -2691,15 +2700,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peakValue: KS stat=0.182, p=4.831e-02 NOT uniform\n",
-      "PTPA: KS stat=0.190, p=3.578e-02 NOT uniform\n",
-      "PTTA: KS stat=0.117, p=4.158e-01 uniform\n",
-      "RMS: KS stat=0.107, p=5.286e-01 uniform\n",
-      "tau: KS stat=0.193, p=3.038e-02 NOT uniform\n",
-      "AUC: KS stat=0.149, p=1.626e-01 uniform\n",
-      "percentPPI: KS stat=0.199, p=3.072e-02 NOT uniform\n",
-      "\n",
-      "Sex: female, Date: June26\n",
       "reactionTime: KS stat=0.241, p=2.979e-03 NOT uniform\n",
       "peakTime: KS stat=0.523, p=2.771e-14 NOT uniform\n",
       "difference: KS stat=0.273, p=4.714e-04 NOT uniform\n",
@@ -3004,7 +3004,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Galahad\\AppData\\Local\\Temp\\ipykernel_22844\\3600028091.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '[0.00000000e+00 6.08272506e-04 1.21654501e-03 ... 9.98783455e-01\n",
+      "C:\\Users\\Galahad\\AppData\\Local\\Temp\\ipykernel_15984\\3600028091.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '[0.00000000e+00 6.08272506e-04 1.21654501e-03 ... 9.98783455e-01\n",
       " 9.99391727e-01 1.00000000e+00]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  df_copy.loc[df_copy[col].dropna().index, col] = transformed\n"
      ]
