--- a/Peakfinder.ipynb
+++ b/Peakfinder.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +100,8 @@
     "\n",
     "PTPA_window = 50\n",
     "\n",
+    "decay_fit_window = 500\n",
+    "\n",
     "first_amount = 20\n",
     "\n",
     "#exclude = [\"offset_PPI\", \"offset_ASR\"] # - - - - - - - - - - - - - - -  experiment types to be excluded from analysis\n",
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +379,7 @@
        "' \\n# ...existing code...\\n\\n# Mean noise across repetitions per experiment per animal\\nanimal_noise_mean = {}\\nfor animal, exp_dict in animal_noise_results.items():\\n    animal_noise_mean[animal] = {}\\n    for exp, noise_list in exp_dict.items():\\n        animal_noise_mean[animal][exp] = float(np.mean(noise_list))\\n\\n# Mean noise across experiments per animal\\nanimal_noise = {}\\nfor animal, exp_dict in animal_noise_mean.items():\\n    all_exp_values = list(exp_dict.values())\\n    if all_exp_values:\\n        animal_noise[animal] = round(float(np.mean(all_exp_values)), 2)\\n    else:\\n        animal_noise[animal] = None\\n\\nif verbose:\\n    print(f\"Collected background noise for {len(animal_noise)} animals (mean):\")\\n    print(animal_noise)\\n# ...existing code... '"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -719,14 +721,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Animal1': 0.94, 'Animal2': 0.95, 'Animal10': 0.94, 'Animal4': 0.94, 'Animal6': 0.95, 'Animal15': 0.89}\n"
+      "{'Animal10': 0.94, 'Animal4': 0.94, 'Animal6': 0.95, 'Animal15': 0.89, 'Animal2': 0.95, 'Animal1': 0.94}\n"
      ]
     }
    ],
@@ -753,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -860,8 +862,8 @@
     "        buildup = max_time - peak_start if not np.isnan(max_time) else np.nan\n",
     "        rms_value = np.sqrt(np.mean(np.square(values_in_window)))\n",
     "\n",
-    "        # --- POST-PEAK decay analysis ---\n",
-    "        decay_mask = (times > max_time)\n",
+    "        # --- POST-PEAK decay analysis (limit to 500 ms) ---\n",
+    "        decay_mask = (times > max_time) & (times <= max_time + decay_fit_window)\n",
     "        times_decay = times[decay_mask] - max_time\n",
     "        values_decay = values[decay_mask]\n",
     "\n",
@@ -879,11 +881,15 @@
     "                fitted_curve = exp_decay(times_decay, A, tau, C)\n",
     "                auc = simpson(fitted_curve, x=times_decay)\n",
     "\n",
-    "                # --- PEAK DECAY analysis ---\n",
-    "                peak_mask = values_decay > fitted_curve\n",
+    "                # --- PEAK DECAY analysis (limit to 500 ms) ---\n",
+    "                peak_mask = (values_decay > fitted_curve)\n",
     "                if np.sum(peak_mask) > 5:\n",
     "                    times_peak_decay = times_decay[peak_mask]\n",
     "                    values_peak_decay = values_decay[peak_mask]\n",
+    "                    # Limit peak decay fit to max 500 ms after peak (already limited by times_decay)\n",
+    "                    peak_decay_limit_mask = times_peak_decay <= decay_fit_window\n",
+    "                    times_peak_decay = times_peak_decay[peak_decay_limit_mask]\n",
+    "                    values_peak_decay = values_peak_decay[peak_decay_limit_mask]\n",
     "                    try:\n",
     "                        p0_peak = [np.max(values_peak_decay), 100, np.min(values_peak_decay)]\n",
     "                        params_peak, _ = curve_fit(exp_decay, times_peak_decay, values_peak_decay, p0=p0_peak, maxfev=10000)\n",
@@ -921,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1262,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
