--- a/Tester.ipynb
+++ b/Tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "id": "9d9fec4f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "id": "dc636f27",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "id": "db90de9e",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "id": "026e654a",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "97c9008c",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "3201a42f",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "e5174879",
    "metadata": {},
    "outputs": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "e1858dae",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "2b0b3480",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "addc53a5",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "id": "832e400c",
    "metadata": {},
    "outputs": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "id": "49d0519d",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "id": "d5f5be70",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1045,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
+   "id": "dab7a230",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       variable       stat             p  significant     posthoc_p  \\\n",
+      "0  reactionTime  37.597457  6.851979e-09         True  1.784506e-08   \n",
+      "1      peakTime   4.206166  1.220795e-01        False           NaN   \n",
+      "2    difference  11.037369  4.011120e-03         True  3.288142e-03   \n",
+      "3     peakValue  46.201293  9.279329e-11         True  5.263573e-10   \n",
+      "4          PTPA  46.275476  8.941451e-11         True  5.326969e-10   \n",
+      "5          PTTA  45.794254  1.137376e-10         True  8.905545e-10   \n",
+      "6           RMS  43.918914  2.904885e-10         True  2.430369e-10   \n",
+      "7           tau   7.413196  2.456094e-02         True  2.314641e-02   \n",
+      "8           AUC  56.121387  6.507224e-13         True  2.109496e-13   \n",
+      "9    percentPPI   0.000002  9.999991e-01        False           NaN   \n",
+      "\n",
+      "  posthoc_test    date1   date2  effect_strength    mean_diff  \n",
+      "0         Dunn  April16  June26        -0.455847     0.779012  \n",
+      "1         None     None    None              NaN          NaN  \n",
+      "2         Dunn  April16  June26         0.234654    -0.699074  \n",
+      "3         Dunn  April16  June26         0.486454   -53.566358  \n",
+      "4         Dunn  April16  June26         0.485854   -53.400855  \n",
+      "5         Dunn  April16  June26         0.479938   -47.609895  \n",
+      "6         Dunn  April16  June26         0.499228   -20.527313  \n",
+      "7         Dunn  April16   May20        -0.224108    14.499903  \n",
+      "8         Dunn  April16  June26         0.558128 -5624.201577  \n",
+      "9         None     None    None              NaN          NaN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# ...existing code...\n",
+    "\n",
+    "import pandas as pd\n",
+    "from scipy.stats import kruskal, mannwhitneyu\n",
+    "import scikit_posthocs as sp\n",
+    "\n",
+    "df = dfs['RESULTS_MTT_MERGED']\n",
+    "\n",
+    "date_results_merged_sex = []\n",
+    "\n",
+    "for var in variables:\n",
+    "    # Non-parametric Kruskal-Wallis for all metrics, merged by sex\n",
+    "    groups = [group[var].dropna().values for _, group in df.groupby('date')]\n",
+    "    groups = [g for g in groups if len(g) > 1]\n",
+    "    stat, p, posthoc_p, posthoc_test, date1, date2, eff, mean_diff = None, None, None, None, None, None, None, None\n",
+    "    if len(groups) > 1:\n",
+    "        stat, p = kruskal(*groups)\n",
+    "        if p < 0.05:\n",
+    "            try:\n",
+    "                dunn = sp.posthoc_dunn(df, val_col=var, group_col='date', p_adjust='bonferroni')\n",
+    "                min_p = dunn.replace(0, float('nan')).min().min()\n",
+    "                idx = dunn.stack().idxmin()\n",
+    "                date1, date2 = idx\n",
+    "                vals1 = df[df['date'] == date1][var].dropna()\n",
+    "                vals2 = df[df['date'] == date2][var].dropna()\n",
+    "                u, _ = mannwhitneyu(vals1, vals2, alternative='two-sided')\n",
+    "                n1, n2 = len(vals1), len(vals2)\n",
+    "                eff = 1 - (2 * u) / (n1 * n2)\n",
+    "                mean_diff = vals1.mean() - vals2.mean()\n",
+    "                posthoc_p = min_p\n",
+    "                posthoc_test = \"Dunn\"\n",
+    "            except Exception:\n",
+    "                posthoc_p, posthoc_test, mean_diff = None, \"Dunn\", None\n",
+    "    date_results_merged_sex.append({\n",
+    "        'variable': var,\n",
+    "        'stat': stat,\n",
+    "        'p': p,\n",
+    "        'significant': p is not None and p < 0.05,\n",
+    "        'posthoc_p': posthoc_p,\n",
+    "        'posthoc_test': posthoc_test,\n",
+    "        'date1': date1,\n",
+    "        'date2': date2,\n",
+    "        'effect_strength': eff,\n",
+    "        'mean_diff': mean_diff\n",
+    "    })\n",
+    "\n",
+    "test_date_merged_sex = pd.DataFrame(date_results_merged_sex)\n",
+    "print(test_date_merged_sex)\n",
+    "\n",
+    "test_date_merged_sex.to_excel(os.path.join(output_dir, \"TEST_DATE_MERGED_SEX.xlsx\"), index=False)\n",
+    "# ...existing code..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "9b67e203",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1143,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sex/variable groups with significant date deviations: 14\n"
+      "Number of sex/variable groups with significant date deviations: 14"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -1086,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "id": "940615f9",
    "metadata": {},
    "outputs": [
@@ -1171,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "id": "5bf9c43b",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "id": "d4e792bb",
    "metadata": {},
    "outputs": [
@@ -1357,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "id": "850548f0",
    "metadata": {},
    "outputs": [
@@ -1417,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "id": "d18710b4",
    "metadata": {},
    "outputs": [
@@ -1531,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "id": "a0c6bf48",
    "metadata": {},
    "outputs": [
@@ -1728,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "id": "0db07a64",
    "metadata": {},
    "outputs": [
@@ -1776,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "id": "4f0481dd",
    "metadata": {},
    "outputs": [
@@ -1827,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "id": "2dc10f76",
    "metadata": {},
    "outputs": [
@@ -1968,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "id": "e4efb02b",
    "metadata": {},
    "outputs": [
@@ -2183,7 +2280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 65,
    "id": "0d700d07",
    "metadata": {},
    "outputs": [
@@ -2311,7 +2408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "id": "531c68d3",
    "metadata": {},
    "outputs": [
@@ -2411,7 +2508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "id": "45fc662d",
    "metadata": {},
    "outputs": [
@@ -2481,7 +2578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
    "id": "0ca23586",
    "metadata": {},
    "outputs": [
@@ -2489,7 +2586,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Galahad\\AppData\\Local\\Temp\\ipykernel_2168\\4005190060.py:25: RuntimeWarning: Mean of empty slice\n",
+      "C:\\Users\\Galahad\\AppData\\Local\\Temp\\ipykernel_1844\\4005190060.py:25: RuntimeWarning: Mean of empty slice\n",
       "  avg_heatmap = np.nanmean(np.stack([m.values for m in pivoted]), axis=0)\n"
      ]
     },
@@ -2604,7 +2701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "id": "6595c27b",
    "metadata": {},
    "outputs": [
@@ -2920,7 +3017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 70,
    "id": "cc5430fb",
    "metadata": {},
    "outputs": [
@@ -2967,7 +3064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "id": "59d30206",
    "metadata": {},
    "outputs": [
@@ -3023,7 +3120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "id": "18b462ef",
    "metadata": {},
    "outputs": [
@@ -3079,7 +3176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "id": "2449bb5d",
    "metadata": {},
    "outputs": [
@@ -3157,7 +3254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "id": "b90c1458",
    "metadata": {},
    "outputs": [
@@ -3223,7 +3320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "id": "8314876c",
    "metadata": {},
    "outputs": [
