--- a/Tester.ipynb
+++ b/Tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "9d9fec4f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "dc636f27",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "db90de9e",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "026e654a",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "97c9008c",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "3201a42f",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "e5174879",
    "metadata": {},
    "outputs": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "e1858dae",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "2b0b3480",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "addc53a5",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "832e400c",
    "metadata": {},
    "outputs": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "49d0519d",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "d5f5be70",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "dab7a230",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "id": "9b67e203",
    "metadata": {},
    "outputs": [
@@ -1143,14 +1143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sex/variable groups with significant date deviations: 14"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Number of sex/variable groups with significant date deviations: 14\n"
      ]
     }
    ],
@@ -1183,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "940615f9",
    "metadata": {},
    "outputs": [
@@ -1268,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "id": "5bf9c43b",
    "metadata": {},
    "outputs": [
@@ -1324,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "id": "d4e792bb",
    "metadata": {},
    "outputs": [
@@ -1454,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "id": "850548f0",
    "metadata": {},
    "outputs": [
@@ -1514,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "id": "d18710b4",
    "metadata": {},
    "outputs": [
@@ -1628,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "id": "a0c6bf48",
    "metadata": {},
    "outputs": [
@@ -1825,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "id": "0db07a64",
    "metadata": {},
    "outputs": [
@@ -1873,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "id": "4f0481dd",
    "metadata": {},
    "outputs": [
@@ -1924,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "id": "2dc10f76",
    "metadata": {},
    "outputs": [
@@ -2065,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "id": "e4efb02b",
    "metadata": {},
    "outputs": [
@@ -2280,7 +2273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "id": "0d700d07",
    "metadata": {},
    "outputs": [
@@ -2408,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "id": "531c68d3",
    "metadata": {},
    "outputs": [
@@ -2508,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "id": "45fc662d",
    "metadata": {},
    "outputs": [
@@ -2578,7 +2571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
    "id": "0ca23586",
    "metadata": {},
    "outputs": [
@@ -2586,7 +2579,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Galahad\\AppData\\Local\\Temp\\ipykernel_1844\\4005190060.py:25: RuntimeWarning: Mean of empty slice\n",
+      "C:\\Users\\Galahad\\AppData\\Local\\Temp\\ipykernel_21980\\4005190060.py:25: RuntimeWarning: Mean of empty slice\n",
       "  avg_heatmap = np.nanmean(np.stack([m.values for m in pivoted]), axis=0)\n"
      ]
     },
@@ -2701,7 +2694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "id": "6595c27b",
    "metadata": {},
    "outputs": [
@@ -3017,7 +3010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "id": "cc5430fb",
    "metadata": {},
    "outputs": [
@@ -3064,7 +3057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "id": "59d30206",
    "metadata": {},
    "outputs": [
@@ -3120,7 +3113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 33,
    "id": "18b462ef",
    "metadata": {},
    "outputs": [
@@ -3176,7 +3169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "id": "2449bb5d",
    "metadata": {},
    "outputs": [
@@ -3254,7 +3247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
    "id": "b90c1458",
    "metadata": {},
    "outputs": [
@@ -3320,7 +3313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 36,
    "id": "8314876c",
    "metadata": {},
    "outputs": [
